Fix for issue #39 - old emit lable used, tweet instead of topTweet. Spacing and comments in index.html Prep for Loading box to help fix issue #36 Spinner for commit 472cdaf removed as it's actually 'orrible Inline images now using extended_entities to show multiples Inline images show 2 per line Extra debugging messages added to client for socket.io Factories moved to own .js file NEVER DO THIS MANY CHANGES BEFORE A COMMIT AGAIN!

--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,12 @@ DIV, SPAN, IMG {
 .tweet-column {
   width: 375px;
 }
+.loading {
+  position: block;
+  bottom: 0px;
+  width: 375px;
+}
+
 SPAN.search-tweets {
   position: fixed;
   width: 375px;
@@ -78,7 +84,7 @@ INPUT.search-tweets, BUTTON.search-tweets {
   opacity:1;
 }
 .left-column {
-    float: left;
+  float: left;
 }
 .right-column {
   width: 293px;
@@ -95,8 +101,8 @@ INPUT.search-tweets, BUTTON.search-tweets {
     margin-right: 3px;
 }
 IMG.tweet-media {
-  max-width: 290px;
-    height: auto;
+  max-width: 140px;
+  height: auto;
 }
 .user{
   font-weight: bold;
@@ -113,8 +119,11 @@ IMG.tweet-media {
 .user-name {
   font-weight: bold;
 }
-.user-handle, .created-at {
+.created-at {
     color: #999;
+}
+.user-handle {
+    color: #BE67D2;
 }
 .created-at {
     font-size: 75%;
